`Refactor HTML and CSS files to update navigation links and include HTML functionality`

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script src="js/include.js" defer></script>
-  <style src="./style.css"></style>
+  <script src="./js/include.js" defer></script>
+  <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body class="bg-white">
 
 
     <!-- navbar -->
- <div include-html="./sections/navbar.html"></div>
+ <div id="navbar" include-html="./sections/navbar.html"></div>
 
     <!-- hero section -->
   <div include-html="./sections/hero.html"></div>
@@ -26,16 +26,19 @@
   <div include-html="./sections/about.html"></div>
 
   <!-- features section -->
-  <div include-html="./sections/features.html"></div>
+  <div include-html="./sections/showreels.html"></div>
   
   <!-- features2 section -->
-  <div include-html="./sections/features2.html"></div>
+  <div include-html="./sections/gallery.html"></div>
  
   <!-- contact section -->
   <div include-html="./sections/contact.html"></div>
 
   <!-- footer section -->
-  <div include-html="./sections/footer.html"></div>
+  <div id="footer" include-html="./sections/footer.html"></div>
+
+
+  
 
 </body>
 </html>
