--- a/sections/about.html
+++ b/sections/about.html
@@ -1,8 +1,8 @@
-<section id="about" class="bg-teal-700 text-black py-20 px-8">
+<section id="about" class="bg-teal-400 text-black py-20 px-2  ">
   <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 items-center relative overflow-hidden">
     
     <!-- Blended Image with Teal Overlay -->
-    <div class="relative w-full h-full">
+    <div class="relative w-full h-full pt-10">
       <div class="absolute inset-0 mix-blend-multiply z-10"></div>
       <img src="./assets/images/aboutImg.png"  alt="About Me" class="w-full h-full object-cover z-0 relative" />
     </div>
