--- a/sections/contact.html
+++ b/sections/contact.html
@@ -1,4 +1,4 @@
-<section class="bg-teal-400 min-h-screen flex flex-col items-center justify-center px-4 py-16">
+<section id="contact" class="bg-teal-400 pt-20 min-h-screen flex flex-col items-center justify-center px-4 py-16">
   <!-- Title -->
   <div class="mb-16 text-center">
     <h2 class="text-5xl md:text-6xl tracking-widest font-extrabold border-[10px] border-black px-10 py-6 inline-block">
