--- a/sections/footer.html
+++ b/sections/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-black text-white px-6 py-12 mt-20 relative">
+<footer class="bg-black text-white px-6 py-12  relative">
   <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-10 text-center md:text-left">
     
     <!-- About -->
@@ -32,8 +32,7 @@
       </div>
     </div>
   </div>
-
-  <!-- Scroll to Top Button -->
+ 
   <button onclick="scrollToTop()" class="absolute right-6 bottom-6 bg-teal-400 text-black p-3 rounded-full shadow-lg hover:bg-white transition">
     <i class="fas fa-arrow-up"></i>
   </button>
