--- a/sections/gallery.html
+++ b/sections/gallery.html
@@ -5,10 +5,10 @@
 
 }
 </style>
-<section>
+<section id="gallery">
 
 
-    <div class="flex flex-wrap">
+    <div class="flex flex-wrap ">
       <!-- Image Card Start -->
      <a href="page1.html" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
   <!-- Background image as a div -->
