--- a/sections/navbar.html
+++ b/sections/navbar.html
@@ -13,11 +13,11 @@
     <!-- Navigation Links -->
     <div class="flex gap-8 text-black text-sm font-light">
       <a href="#" class="text-teal-700">Home</a>
-      <a href="#">About</a>
-      <a href="#">Showreels</a>
-      <a href="#">Gallery</a>
-      <a href="#">Resume</a>
-      <a href="#">Representation</a>
+      <a href="#about">About</a>
+      <a href="#showreels">Showreels</a>
+      <a href="#gallery">Gallery</a>
+      <a href="./sections/resume.html">Resume</a>
+      <a href="#contact">Representation</a>
     </div>
   </nav>
 </section>
