--- a/sections/showreels.html
+++ b/sections/showreels.html
@@ -1,5 +1,5 @@
 <!--  features -->
-<section class="relative h-screen flex items-center justify-center bg-cover  bg-center" style="background-image: url('../assets/images/featuresbg.png');">
+<section id="showreels" class="relative  h-screen flex items-center justify-center bg-cover  bg-center" style="background-image: url('../assets/images/featuresbg.png');">
   <div class="bg-black bg-opacity-20 absolute inset-0 z-0"></div>
 
   <div class="z-10 flex flex-col space-y-20 items-center">
