--- a/sections/navbar.html
+++ b/sections/navbar.html
@@ -11,7 +11,7 @@
     </div>
 
     <!-- Navigation Links -->
-    <div class="flex gap-8 text-black text-sm font-light">
+    <div class="flex gap-8 text-black text-sm font-medium">
       <a href="#" class="text-teal-700">Home</a>
       <a href="#about">About</a>
       <a href="#showreels">Showreels</a>
