`Update links to use absolute paths and fix anchor tags`

--- a/sections/about.html
+++ b/sections/about.html
@@ -16,7 +16,7 @@
       <p class="mb-6 text-lg">
         This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide.
       </p>
-      <a href="#" class="inline-block bg-black text-white px-6 py-3 text-sm hover:bg-gray-800 transition">See Resume</a>
+      <a href="/sections/resume.html" class="inline-block bg-black text-white px-6 py-3 text-sm hover:bg-gray-800 transition">See Resume</a>
     </div>
 
   </div>
