--- a/sections/gallery.html
+++ b/sections/gallery.html
@@ -10,7 +10,7 @@
 
     <div class="flex flex-wrap ">
       <!-- Image Card Start -->
-     <a href="page1.html" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
+     <a href="/sections/individualImgGallery.html?image=0" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
   <!-- Background image as a div -->
   <div class="absolute inset-0 bg-cover bg-center scale-image transition-transform duration-500 ease-in-out" style="background-image: url('../assets/images/features2Img/tempImg.png')"></div>
 
@@ -25,7 +25,7 @@
   </div>
 </a>
     
-<a href="page2.html" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
+<a href="/sections/individualImgGallery.html?image=1" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
   <!-- Background image as a div -->
   <div class="absolute inset-0 bg-cover bg-center scale-image transition-transform duration-500 ease-in-out" style="background-image: url('../assets/images/features2Img/tempImg.png')"></div>
 
@@ -40,7 +40,7 @@
   </div>
 </a>
 
-<a href="page3.html" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
+<a href="/sections/individualImgGallery.html?image=2" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
   <!-- Background image as a div -->
   <div class="absolute inset-0 bg-cover bg-center scale-image transition-transform duration-500 ease-in-out" style="background-image: url('../assets/images/features2Img/tempImg.png')"></div>
 
@@ -55,7 +55,7 @@
   </div>
 </a>
 
-<a href="page4.html" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
+<a href="/sections/individualImgGallery.html?image=3" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
   <!-- Background image as a div -->
   <div class="absolute inset-0 bg-cover bg-center scale-image transition-transform duration-500 ease-in-out" style="background-image: url('../assets/images/features2Img/tempImg.png')"></div>
 
@@ -70,7 +70,7 @@
   </div>
 </a>
 
-<a href="page5.html" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
+<a href="/sections/individualImgGallery.html?image=4" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
   <!-- Background image as a div -->
   <div class="absolute inset-0 bg-cover bg-center scale-image transition-transform duration-500 ease-in-out" style="background-image: url('../assets/images/features2Img/tempImg.png')"></div>
 
@@ -84,7 +84,7 @@
     </div>
   </div>
 </a>
-    <a href="page6.html" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
+    <a href="/sections/individualImgGallery.html?image=5" target="_blank" class="relative group w-1/3 h-96 overflow-hidden">
   <!-- Background image as a div -->
   <div class="absolute inset-0 bg-cover bg-center scale-image transition-transform duration-500 ease-in-out" style="background-image: url('../assets/images/features2Img/tempImg.png')"></div>
 
