--- a/sections/resume.html
+++ b/sections/resume.html
@@ -19,16 +19,19 @@
    <section class="mt-20 min-h-screen bg-teal-400 flex flex-col items-center justify-center px-4 text-center">
     
     <!-- Back Arrow -->
-    <div class="w-full max-w-6xl mx-auto flex justify-start ">
-      <a href="../index.html" class="text-3xl">
-        <i class="fas fa-arrow-left"></i>
-      </a>
-    </div>
+     <div>
 
-    <!-- Resume Heading -->
-    <div class="border-8 border-black px-64 py-7 mb-12">
-      <h1 class="text-5xl font-extrabold tracking-widest">RESUME</h1>
-    </div>
+       <div class="w-full pt-10 max-w-6xl mx-auto flex justify-start ">
+         <a href="../index.html" class="text-3xl">
+           <i class="fas fa-arrow-left"></i>
+         </a>
+       </div>
+   
+       <!-- Resume Heading -->
+       <div class="border-8 mt-5 border-black px-64 py-7 mb-12">
+         <h1 class="text-5xl font-extrabold tracking-widest">RESUME</h1>
+       </div>
+     </div>
 
     <!-- About Me Section -->
     <div class="max-w-3xl mx-auto">
