--- a/sections/showreels.html
+++ b/sections/showreels.html
@@ -3,13 +3,13 @@
   <div class="bg-black bg-opacity-20 absolute inset-0 z-0"></div>
 
   <div class="z-10 flex flex-col space-y-20 items-center">
-    <a href="film.html" class="w-64 flex justify-center px-96 py-7 font-bold text-5xl rounded-1 border-[10px]  border-black text-black  bg-[#B7F3EC] hover:bg-white transition duration-300 ">
+    <a href="/sections/film.html" class="w-64 flex justify-center px-96 py-7 font-bold text-5xl rounded-1 border-[10px]  border-black text-black  bg-[#B7F3EC] hover:bg-white transition duration-300 ">
       <span class="tracking-widest">FILM</span>
     </a>
-    <a href="theater.html" class="w-64 flex justify-center px-96 py-7 font-bold text-5xl rounded-1 border-[10px]  border-black text-black  bg-[#00E3C8] hover:bg-white transition duration-300 ">
+    <a href="/sections/theater.html" class="w-64 flex justify-center px-96 py-7 font-bold text-5xl rounded-1 border-[10px]  border-black text-black  bg-[#00E3C8] hover:bg-white transition duration-300 ">
       <span class="tracking-widest">THEATER</span>
     </a>
-    <a href="commercial.html" class="w-64 flex justify-center px-96 py-7 font-bold text-5xl rounded-1 border-[10px]  border-black text-black   bg-[#218376]  hover:bg-white transition duration-300 ">
+    <a href="/sections/commercial.html" class="w-64 flex justify-center px-96 py-7 font-bold text-5xl rounded-1 border-[10px]  border-black text-black   bg-[#218376]  hover:bg-white transition duration-300 ">
       <span class="tracking-widest">COMMERCIAL</span>
     </a>
   </div>
