--- a/sections/navbar.html
+++ b/sections/navbar.html
@@ -11,12 +11,12 @@
     </div>
 
     <!-- Navigation Links -->
-    <div class="flex gap-8 text-black text-sm font-medium">
-      <a href="#" class="text-teal-700">Home</a>
+    <div class="flex gap-8 text-black text-lg font-medium">
+      <a href="/" class="text-teal-700">Home</a>
       <a href="#about">About</a>
       <a href="#showreels">Showreels</a>
       <a href="#gallery">Gallery</a>
-      <a href="./sections/resume.html">Resume</a>
+      <a href="/sections/resume.html">Resume</a>
       <a href="#contact">Representation</a>
     </div>
   </nav>
